[package]
name = "graph-node"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for Subgraph queries"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/graph-node"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "~0.11.0" }
polywrap_msgpack_serde = "0.0.2-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
serde_bytes = "0.11.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
